--- a/src/app/carts/components/cart.component.html
+++ b/src/app/carts/components/cart.component.html
@@ -1,6 +1,13 @@
 <div *ngIf='items.length > 0; else cartEmpty'>
-    <div *ngFor="let item of items; trackBy: trackByProductItems">
-        {{item.id}} - {{item.name}}
-      </div>
+  <app-cart-item
+    *ngFor="let item of items; trackBy: trackByProductItems"
+    [item]="item"
+    (updateItemQuantity)="onUpdateItemQuantity(item, $event)"
+    (removeItem)="onRemoveItem(item)">
+  </app-cart-item>
+  <div>
+    <span>Total Amount</span>
+    <span>{{totalAmount}}</span>
+  </div>
 </div>
 <ng-template #cartEmpty><b>No items in the shopping cart.</b></ng-template>
