--- a/src/app/carts/components/cart.component.html
+++ b/src/app/carts/components/cart.component.html
@@ -7,6 +7,7 @@
   </app-cart-item>
   <div>
     <span>Total Amount:&nbsp;</span>
+    <!-- Такой объект лучше формировать в классе, легче читать и HTML чище будет -->
     <span [ngClass]="{red: totalAmount >= 3000, yellow: totalAmount > 100 && totalAmount < 3000 }">{{totalAmount}}</span>
   </div>
 </div>
