--- a/src/app/products/components/product-item/product-item.component.html
+++ b/src/app/products/components/product-item/product-item.component.html
@@ -3,7 +3,7 @@
     <div appFontSizeClickChanger [step]="2">{{product.name}}</div>
     <div class="price">
         <p class="red">{{product.price}}</p>
-        <div *ngIf='product.inStock; else outOfStock'><button (click)="onAddItem(product)">+ Add</button></div>
+        <div *ngIf='product.inStock; else outOfStock'><button (click)="onAddItem()">+ Add</button></div>
     </div>
     <ng-template #outOfStock><div>Out of stock.</div></ng-template>
 </div>
