--- a/src/app/products/components/product-item/product-item.component.html
+++ b/src/app/products/components/product-item/product-item.component.html
@@ -1,5 +1,7 @@
 <div class="product">
-    <div class="picture"><img [src]="product.imageUrl" [alt]="product.name" /></div>
+    <div class="picture">
+        <a [routerLink]="['/products', product.id]"><img [src]="product.imageUrl" [alt]="product.name" /></a>
+    </div>
     <div appFontSizeClickChanger [step]="2">{{product.name}}</div>
     <div class="price">
         <p class="red">{{product.price | currency:'USD':'symbol':'1.2-2'}}</p>
