added auth service and guard

--- a/src/app/products/components/product-details/product-details.component.html
+++ b/src/app/products/components/product-details/product-details.component.html
@@ -8,7 +8,7 @@
         </div>
         <div>
             <p class="red">{{product.price | currency:'USD':'symbol':'1.2-2'}}</p>
-            <div *ngIf='product.inStock; else outOfStock'><button>+ Add</button></div>
+            <div *ngIf='product.inStock; else outOfStock'><button (click)="onAddProduct(product)">+ Add</button></div>
             <ng-template #outOfStock><div>Out of stock.</div></ng-template>
         </div>
     </div>
