--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,9 @@
             </ul>
             <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
               <li class="nav-item">
+                <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" routerLink="/cart" routerLinkActive="active">Cart</a>
               </li>
             </ul>
