--- a/src/app/cart/components/cart-item/cart-item.component.html
+++ b/src/app/cart/components/cart-item/cart-item.component.html
@@ -1,3 +1,4 @@
+<!-- Насколько я знаю, расположение button внутри span не является допустимым с точки зрения HTML-синтаксиса. Это потому, что span - это строчный элемент, а button - это блочный элемент. Строчные элементы не могут содержать в себе блочные элементы, так как это нарушает правила вложенности -->
 <div>
     <span appHighlight [color]='"red"'>{{item.name | uppercase}}</span>
     <span><button (click)="onRemoveItem()">Delete</button></span>
