--- a/src/app/admin/components/products/products-list/product-list.component.html
+++ b/src/app/admin/components/products/products-list/product-list.component.html
@@ -1,3 +1,4 @@
+<a [routerLink]="['../products/add']">Add New Product</a>
 <app-product-item 
     *ngFor="let product of products$ | async"
     [product]="product"
